modificaciones menores de letra

--- a/talleres/taller1_titanic.ipynb
+++ b/talleres/taller1_titanic.ipynb
@@ -39,7 +39,6 @@
    "cell_type": "markdown",
    "id": "graphic-longitude",
    "metadata": {
-    "heading_collapsed": true,
     "id": "graphic-longitude"
    },
    "source": [
@@ -51,7 +50,6 @@
    "id": "similar-surgery",
    "metadata": {
     "heading_collapsed": true,
-    "hidden": true,
     "id": "similar-surgery"
    },
    "source": [
@@ -341,8 +339,6 @@
    "cell_type": "markdown",
    "id": "efficient-thailand",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true,
     "id": "efficient-thailand"
    },
    "source": [
@@ -353,7 +349,6 @@
    "cell_type": "markdown",
    "id": "compound-criminal",
    "metadata": {
-    "hidden": true,
     "id": "compound-criminal"
    },
    "source": [
@@ -364,7 +359,6 @@
    "cell_type": "markdown",
    "id": "e_rith_Skga5",
    "metadata": {
-    "hidden": true,
     "id": "e_rith_Skga5"
    },
    "source": [
@@ -390,7 +384,6 @@
      },
      "user_tz": 180
     },
-    "hidden": true,
     "id": "timely-power",
     "outputId": "9b878f94-05b8-4598-baa4-08a3e132868d"
    },
@@ -412,7 +405,6 @@
    "cell_type": "markdown",
    "id": "9WC47WBdkeqj",
    "metadata": {
-    "hidden": true,
     "id": "9WC47WBdkeqj"
    },
    "source": [
@@ -423,7 +415,6 @@
    "cell_type": "markdown",
    "id": "changing-enhancement",
    "metadata": {
-    "hidden": true,
     "id": "changing-enhancement"
    },
    "source": [
@@ -464,7 +455,6 @@
      },
      "user_tz": 180
     },
-    "hidden": true,
     "id": "convinced-person",
     "outputId": "59951021-dcb6-4622-e24e-062806a6ce7f"
    },
@@ -519,7 +509,6 @@
    "cell_type": "markdown",
    "id": "fossil-australian",
    "metadata": {
-    "hidden": true,
     "id": "fossil-australian"
    },
    "source": [
@@ -545,7 +534,6 @@
      },
      "user_tz": 180
     },
-    "hidden": true,
     "id": "independent-eagle",
     "outputId": "bfe00bd3-81a5-487f-e60f-8b6e2ce1a189"
    },
@@ -575,7 +563,6 @@
    "cell_type": "markdown",
    "id": "sudden-therapist",
    "metadata": {
-    "hidden": true,
     "id": "sudden-therapist"
    },
    "source": [
@@ -1548,7 +1535,6 @@
      "end_time": "2022-02-14T15:13:41.567355Z",
      "start_time": "2022-02-14T15:13:41.549405Z"
     },
-    "heading_collapsed": true,
     "id": "partial-enzyme"
    },
    "source": [
@@ -1560,7 +1546,6 @@
    "id": "static-associate",
    "metadata": {
     "heading_collapsed": true,
-    "hidden": true,
     "id": "static-associate"
    },
    "source": [
@@ -1602,8 +1587,6 @@
    "cell_type": "markdown",
    "id": "hydraulic-particle",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true,
     "id": "hydraulic-particle"
    },
    "source": [
@@ -1614,7 +1597,6 @@
    "cell_type": "markdown",
    "id": "operational-valuation",
    "metadata": {
-    "hidden": true,
     "id": "operational-valuation"
    },
    "source": [
@@ -1625,7 +1607,6 @@
    "cell_type": "markdown",
    "id": "favorite-palestine",
    "metadata": {
-    "hidden": true,
     "id": "favorite-palestine"
    },
    "source": [
@@ -1634,44 +1615,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-biodiversity",
-   "metadata": {
-    "hidden": true,
-    "id": "manual-biodiversity"
-   },
-   "source": [
-    "En regresión logística el modelo lineal se compone con en la función logística teniendo así la siguiente expresión: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2dd2d65a",
    "metadata": {
-    "hidden": true,
     "id": "forced-cornwall"
    },
    "source": [
+    "En Regresión Logística el modelo lineal se compone con en la función logística teniendo así la siguiente expresión: \n",
+    "\n",
     "\\begin{equation}\n",
-    "P\\left(y^{(i)}=1\\right)=\\frac{1}{1+\\exp \\left(-\\left(\\beta_{0}+\\beta_{1} x_{1}^{(i)}+\\ldots+\\beta_{p} x_{p}^{(i)}\\right)\\right)}\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "psychological-operations",
-   "metadata": {
-    "hidden": true,
-    "id": "psychological-operations"
-   },
-   "source": [
-    "Siendo $\\beta_{p} $ los coeficientes (pesos) del modelo. "
+    "P\\left(y^{(i)}=1\\right)=\\frac{1}{1+\\exp \\left(-\\left(\\beta_{0}+\\beta_{1} x_{1}^{(i)}+\\ldots+\\beta_{p} x_{p}^{(i)}\\right)\\right)},\n",
+    "\\end{equation}\n",
+    "\n",
+    "siendo $\\beta_{p} $ los coeficientes (pesos) del modelo. "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "fluid-pontiac",
    "metadata": {
-    "hidden": true,
     "id": "fluid-pontiac"
    },
    "source": [
@@ -1682,7 +1643,6 @@
    "cell_type": "markdown",
    "id": "adopted-matthew",
    "metadata": {
-    "hidden": true,
     "id": "adopted-matthew"
    },
    "source": [
@@ -1695,7 +1655,6 @@
    "cell_type": "markdown",
    "id": "infrared-board",
    "metadata": {
-    "hidden": true,
     "id": "infrared-board"
    },
    "source": [
@@ -1706,7 +1665,6 @@
    "cell_type": "markdown",
    "id": "positive-process",
    "metadata": {
-    "hidden": true,
     "id": "positive-process"
    },
    "source": [
@@ -1719,7 +1677,6 @@
    "cell_type": "markdown",
    "id": "operational-contribution",
    "metadata": {
-    "hidden": true,
     "id": "operational-contribution"
    },
    "source": [
@@ -1730,7 +1687,6 @@
    "cell_type": "markdown",
    "id": "dimensional-response",
    "metadata": {
-    "hidden": true,
     "id": "dimensional-response"
    },
    "source": [
@@ -1743,7 +1699,6 @@
    "cell_type": "markdown",
    "id": "short-korea",
    "metadata": {
-    "hidden": true,
     "id": "short-korea"
    },
    "source": [
@@ -1754,7 +1709,6 @@
    "cell_type": "markdown",
    "id": "manufactured-internship",
    "metadata": {
-    "hidden": true,
     "id": "manufactured-internship"
    },
    "source": [
@@ -1767,7 +1721,6 @@
    "cell_type": "markdown",
    "id": "faced-switzerland",
    "metadata": {
-    "hidden": true,
     "id": "faced-switzerland"
    },
    "source": [
@@ -1778,7 +1731,6 @@
    "cell_type": "markdown",
    "id": "selected-meeting",
    "metadata": {
-    "hidden": true,
     "id": "selected-meeting"
    },
    "source": [
@@ -1794,9 +1746,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6f47dc0b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1804,7 +1754,6 @@
    "cell_type": "markdown",
    "id": "weighted-poetry",
    "metadata": {
-    "heading_collapsed": true,
     "id": "weighted-poetry"
    },
    "source": [
@@ -1815,12 +1764,10 @@
    "cell_type": "markdown",
    "id": "suffering-minority",
    "metadata": {
-    "hidden": true,
     "id": "suffering-minority"
    },
    "source": [
-    "A lo largo del curso se abordarán dos proyectos. El objetivo del primer proyecto será diseñar e implementar un clasificador para el problema de [detección del bosón de Higss](https://www.kaggle.com/c/higgs-boson). Este desafío buscará separar aquellos eventos en donde hay presencia del bosón de Higgs (llamados \"signals\") de los que no\n",
-    "(llamados \"background\").\n",
+    "A lo largo del curso se abordarán dos proyectos. El objetivo del primer proyecto será diseñar e implementar un clasificador para el problema de [detección del bosón de Higgs](https://www.kaggle.com/c/higgs-boson). Este desafío buscará separar aquellos eventos en donde el bosón de Higgs decae a partículas $\\tau \\tau$ (llamados \"signals\") del resto de los eventos (llamados \"background\").\n",
     "\n",
     "Para los proyectos se trabajará en grupos de tres estudiantes. \n",
     "\n",
@@ -1831,7 +1778,6 @@
    "cell_type": "markdown",
    "id": "global-prefix",
    "metadata": {
-    "hidden": true,
     "id": "global-prefix"
    },
    "source": [
@@ -1850,7 +1796,6 @@
    "execution_count": null,
    "id": "closed-telephone",
    "metadata": {
-    "hidden": true,
     "id": "closed-telephone"
    },
    "outputs": [],
@@ -1886,7 +1831,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1900,7 +1845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
