--- a/talleres/taller2_criticas_cine.ipynb
+++ b/talleres/taller2_criticas_cine.ipynb
@@ -1251,7 +1251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1265,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
