--- a/talleres/taller3_demanda_de_bicicletas.ipynb
+++ b/talleres/taller3_demanda_de_bicicletas.ipynb
@@ -476,11 +476,9 @@
    "source": [
     "#### Preguntas:\n",
     "\n",
-    " - ¿Qué efecto tiene el tiempo (meteorológico) sobre el alquiler de bicicletas? ¿Es el mismo para clientes registrados y casuales? ¿Coincide esto con lo que asumiría a priori?\n",
-    " \n",
-    " - Habiendo observado lo anterior, ¿A qué se puede deber que la correlación entre *season* y *casual* sea baja?\n",
-    " \n",
-    " - Vamos a trabajar con las codifificaciones por defecto (salvo datetime que veremos en la Parte 2). ¿Le parece adecuado?"
+    " - ¿Qué efecto tiene el tiempo (meteorológico) sobre el alquiler de bicicletas? ¿Es el mismo para clientes registrados y casuales? ¿Coincide esto con lo que asumiría a priori? \n",
+    " - Vamos a trabajar con las codifificaciones por defecto (salvo datetime que veremos en la Parte 2). ¿Le parece adecuado?\n",
+    "  - ¿Qué puede decir sobre la correlación entre *season* y *casual* es baja?\n"
    ]
   },
   {
@@ -1178,7 +1176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1192,7 +1190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   },
   "varInspector": {
    "cols": {
