--- a/talleres/taller3_demanda_de_bicicletas.ipynb
+++ b/talleres/taller3_demanda_de_bicicletas.ipynb
@@ -406,7 +406,7 @@
     "#### Preguntas:\n",
     "\n",
     " - ¿Qué efecto tiene el tiempo (meteorológico) sobre el alquiler de bicicletas? ¿Es el mismo para clientes registrados y casuales? ¿Coincide esto con lo que asumiría a priori? \n",
-    " - Vamos a trabajar con las codifificaciones por defecto (salvo datetime que veremos en la Parte 2). ¿Le parece adecuado?    \n",
+    " - Vamos a trabajar con las codificaciones por defecto (salvo datetime que veremos en la Parte 2). ¿Le parece adecuado?\n",
     " - ¿Qué puede decir sobre la correlación entre *season* y *casual*?\n"
    ]
   },
