actualizada la letra de Taller 5

--- a/talleres/taller5_demanda_de_bicicletas_con_NNs.ipynb
+++ b/talleres/taller5_demanda_de_bicicletas_con_NNs.ipynb
@@ -19,7 +19,7 @@
     "# Introducción\n",
     "\n",
     "En esta actividad se retomará el problema de la competencia [*Bike Sharing Demand*](https://www.kaggle.com/c/bike-sharing-demand) visto en el Taller 3.\n",
-    "Esta vez las estimaciónes deben obtenerse utilizando la herramienta: *Multilayer Perceptron* (MLP). Es importante mantener la función *Root Mean Squared Logarithmic Error* (RMSLE) como medida de desempeño de manera de poder comparar los resultados con los obtenidos en el Taller 3.\n",
+    "En este Taller nos focalizaremos en cómo abordar el problema mediante *redes neuronales*, utilizando la implementación de la biblioteca *keras*. También se verá como optimizar los *hiperparámetros* de las redes utilizando las bibiliotecas *scikit-learn* y *optuna*. Es importante mantener la función *Root Mean Squared Logarithmic Error* (RMSLE) como medida de desempeño de manera de poder comparar los resultados con los obtenidos en el Taller 3.\n",
     "\n",
     "Tanto las preguntas teóricas como la parte práctica de esta actividad están ligadas al contenido del capítulo 10 (*Introduction to\n",
     "Artificial Neural Networks with\n",
@@ -35,13 +35,12 @@
     "## Objetivos\n",
     "\n",
     "\n",
-    "*   Trabajar con modelos MLP utilizando la librería [*Keras*](https://keras.io/api/).\n",
+    "*   Trabajar con modelos MLP utilizando la biblioteca [*Keras*](https://keras.io/api/).\n",
     "*   Probar algunas de las herramientas disponibles para la busqueda de hiperparámetros.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "graphic-longitude",
    "metadata": {
     "id": "graphic-longitude"
    },
@@ -51,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-surgery",
    "metadata": {
     "id": "similar-surgery"
    },
@@ -61,7 +59,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616868da",
    "metadata": {
     "id": "616868da"
    },
@@ -71,7 +68,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a76c306",
    "metadata": {
     "id": "9a76c306"
    },
@@ -81,39 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a25f6679",
+   "execution_count": null,
    "metadata": {
     "id": "a25f6679",
     "outputId": "d70c8c1e-530a-45ef-e259-f3addee20c02",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading bike-sharing-demand.zip to C:\\Users\\diego\\Desktop\\Fing\\TAA_2022\\Taller3\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0.00/189k [00:00<?, ?B/s]\n",
-      "100%|##########| 189k/189k [00:00<00:00, 2.37MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kaggle competitions download -c bike-sharing-demand"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e60a6af5",
    "metadata": {
     "id": "e60a6af5"
    },
@@ -123,8 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f5598637",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +109,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-thailand",
    "metadata": {
     "id": "efficient-thailand"
    },
@@ -144,7 +118,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compound-criminal",
    "metadata": {
     "id": "compound-criminal"
    },
@@ -154,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e_rith_Skga5",
    "metadata": {
     "id": "e_rith_Skga5"
    },
@@ -164,8 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "timely-power",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -184,15 +155,7 @@
     "id": "timely-power",
     "outputId": "9b878f94-05b8-4598-baa4-08a3e132868d"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
@@ -200,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9WC47WBdkeqj",
    "metadata": {
     "id": "9WC47WBdkeqj"
    },
@@ -210,7 +172,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "changing-enhancement",
    "metadata": {
     "id": "changing-enhancement"
    },
@@ -220,8 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "convinced-person",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -255,35 +215,7 @@
     "id": "convinced-person",
     "outputId": "59951021-dcb6-4622-e24e-062806a6ce7f"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "     <input type=\"file\" id=\"files-9aac17d7-74a2-4517-9b3a-a05f89211782\" name=\"files[]\" multiple disabled\n",
-       "        style=\"border:none\" />\n",
-       "     <output id=\"result-9aac17d7-74a2-4517-9b3a-a05f89211782\">\n",
-       "      Upload widget is only available when the cell has been executed in the\n",
-       "      current browser session. Please rerun this cell to enable.\n",
-       "      </output>\n",
-       "      <script src=\"/nbextensions/google.colab/files.js\"></script> "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving kaggle.json to kaggle.json\n",
-      "User uploaded file \"kaggle.json\" with length 66 bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -304,7 +236,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fossil-australian",
    "metadata": {
     "id": "fossil-australian"
    },
@@ -314,8 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "independent-eagle",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -334,24 +264,7 @@
     "id": "independent-eagle",
     "outputId": "bfe00bd3-81a5-487f-e60f-8b6e2ce1a189"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.12 / client 1.5.4)\n",
-      "Downloading gender_submission.csv to /content\n",
-      "  0% 0.00/3.18k [00:00<?, ?B/s]\n",
-      "100% 3.18k/3.18k [00:00<00:00, 2.92MB/s]\n",
-      "Downloading train.csv to /content\n",
-      "  0% 0.00/59.8k [00:00<?, ?B/s]\n",
-      "100% 59.8k/59.8k [00:00<00:00, 53.3MB/s]\n",
-      "Downloading test.csv to /content\n",
-      "  0% 0.00/28.0k [00:00<?, ?B/s]\n",
-      "100% 28.0k/28.0k [00:00<00:00, 28.8MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kaggle competitions download -c bike-sharing-demand"
    ]
@@ -359,7 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8d263ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +280,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sudden-therapist",
    "metadata": {
     "id": "sudden-therapist"
    },
@@ -382,7 +293,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55fa687",
    "metadata": {},
    "source": [
     "## Paquetes a utilizar"
@@ -390,7 +300,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9f70ec",
    "metadata": {},
    "source": [
     "En esta actividad se utilizarán algunas bibliotecas auxiliares que deberán ser instaladas. Ejecutar la siguiente celda hasta que se ejecute sin errores. En caso de error, se puede instalar el paquete faltante desde el notebook con el comando:\n",
@@ -400,9 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f166004a",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-06T08:30:53.587152Z",
+     "start_time": "2022-04-06T08:30:53.549039Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#import comet_ml in the top of your file\n",
@@ -433,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Viendo que se va a trabajar con redes neuronales,¿Cree que debería agregar algún paso más al preprocesamiento?"
+    "- Dado que se trabajará con redes neuronales, ¿Cree conveniente realizar alguna modificación en el preprocesamiento?"
    ]
   },
   {
@@ -502,9 +415,9 @@
     "*   Probar el *tip* que se sugiere en la sección *Number of Neurons per Hidden Layer* y comentar los resultados.\n",
     "\n",
     "\n",
-    "Nota: Debido a los recientes cambios de *Scikit-Learn* la ejecución del codigo del ejemplo puede devolver errores. Revisar la sección *Hyperparameter Tuning* en el [notebook](https://github.com/ageron/handson-ml2/blob/master/10_neural_nets_with_keras.ipynb) del capítulo, en la cual se resuelven estos errores.\n",
+    "Nota: Debido a los recientes cambios de *Scikit-Learn* la ejecución del código del ejemplo puede generar errores. Revisar la sección *Hyperparameter Tuning* en el [notebook](https://github.com/ageron/handson-ml2/blob/master/10_neural_nets_with_keras.ipynb) del Capítulo 10, en la cual se resuelven estos errores.\n",
     "\n",
-    "Nota2: Las implementaciones que utiliza el autor del libro funcionan correctamente, pero puede saltar algún Waring por alguna paquete que está *deprecated*. Una librería que se puede investigar es *scikeras*, en particular el siguiente [tutorial](https://www.adriangb.com/scikeras/stable/quickstart.html#grid-search)."
+    "Nota2: Las implementaciones que utiliza el autor del libro funcionan correctamente, pero dependiendo de la versiones utilizadas, se puede generar algún *Warning* por algún paquete que está *deprecated*. Una biblioteca que se puede investigar es *scikeras*, en particular el siguiente [tutorial](https://www.adriangb.com/scikeras/stable/quickstart.html#grid-search)."
    ]
   },
   {
@@ -581,7 +494,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.6.9"
   },
   "varInspector": {
    "cols": {
