--- a/talleres/taller8_demanda_de_bicicletas_rnn.ipynb
+++ b/talleres/taller8_demanda_de_bicicletas_rnn.ipynb
@@ -106,7 +106,7 @@
       "source": [
         "<table align=\"left\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/TAA-fing/TAA-2022/blob/main/talleres/taller8_demanda_de_bicicletas_rnn.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Ejecutar en Google Colab</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/TAA-fing/TAA-2022/blob/main/talleres/taller8_demanda_de_bicicletas_rnn.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Ejecutar en Google Colab</a>\n",
         "  </td>\n",
         "</table>"
       ]
