--- a/talleres/taller8_demanda_de_bicicletas_rnn.ipynb
+++ b/talleres/taller8_demanda_de_bicicletas_rnn.ipynb
@@ -27,7 +27,7 @@
       },
       "source": [
         "#  <center> Taller  de Aprendizaje Automático </center>\n",
-        "##  <center> Taller 8: Demanda de bicicletas compartidas. Predicciones con *Recurrent Neural Networks*  </center>"
+        "##  <center> Taller 8: Demanda de bicicletas compartidas. Predicciones con Redes Neuronales Recurrentes </center>"
       ]
     },
     {
