--- a/talleres/taller9_NLP.ipynb
+++ b/talleres/taller9_NLP.ipynb
@@ -310,15 +310,15 @@
     "\n",
     "  Entrada: \n",
     "\n",
-    "    datasets: Tensorflow Dataset con las críticas. \n",
-    "    batch_size: Tamaño de los batches a preprocesar.\n",
+    "    datasets: Tensorflow Dataset con las críticas \n",
+    "    batch_size: Tamaño de los batches a preprocesar\n",
     "    vocab_size: Tamaño del Vocabulario\n",
     "    num_oov_buckets: Cantidad de palabras fuera del vocabulario (Out-of-Vocabulary bucket)\n",
     "\n",
     "  Salida:\n",
-    "    table: Tabla del Vocabulario\n",
-    "    words: Palabras del Vocabulario\n",
-    "    word_ids: Indices de las palabras en el Vocabulario\n",
+    "    table: Tensorflow StaticVocabularyTable con la tabla del vocabulario\n",
+    "    words: Tensorflow Tensor con las palabras del vocabulario\n",
+    "    word_ids: Tensorflow Tensor con los indices de las palabras en el vocabulario\n",
     "\n",
     "  '''\n",
     "  \n",
@@ -450,7 +450,7 @@
     "id": "QqU7n4gMZc5X"
    },
    "source": [
-    "* El modelo cuenta con una capa de entrada de *embedding* la cual abarca la mayoría de los parámetros entrenables. En este caso un *embedding* es un vector entrenable que representa una palabra en nuevo espacio cuyo tamaño es un hiperparámetro. La concatenación de estos vectores conforma la matriz de *embedding*, donde su cantidad de filas corresponde a la suma del tamaño del vocabulario más la cantidad reservada para los *out-of-vocabulary* (vocab_size + num_oov_buckets), y la cantidad de columnas a las dimensiones de los vectores (*embed_size*). Al igual que una matriz de pesos, ésta se inicializa de forma aleatoria, y actualiza sus valores para cada *step* de entrenamiento.\n",
+    "* El modelo cuenta con una capa de entrada de *embedding* la cual abarca la mayoría de los parámetros entrenables. En este caso un *embedding* es un vector entrenable que representa una palabra en un nuevo espacio cuyo tamaño es un hiperparámetro. La concatenación de estos vectores conforma la matriz de *embedding*, donde su cantidad de filas corresponde a la suma del tamaño del vocabulario más la cantidad reservada para los *out-of-vocabulary* (vocab_size + num_oov_buckets), y la cantidad de columnas a las dimensiones de los vectores (*embed_size*). Al igual que una matriz de pesos, ésta se inicializa de forma aleatoria, y actualiza sus valores para cada *step* de entrenamiento.\n",
     "\n",
     "  *   ¿Cuál es la ventaja de utilizar una capa de *embedding*? (Ver la sección *Encoding Categorical Features Using Embeddings* del capítulo 13 del libro.)\n",
     "  *   Visualizar una representación del espacio de *embedding* utilizando *Comet*.\n",
@@ -554,7 +554,7 @@
     "id": "BwqxdPALEyJ4"
    },
    "source": [
-    "* Continue el entrenamiento ahora con el *embedding* entrenable. Modifique el *learning rate*."
+    "* Continuar el entrenamiento ahora con el *embedding* entrenable. Modifique el *learning rate*."
    ]
   },
   {
@@ -590,7 +590,7 @@
     "id": "Af_D4NTCsezj"
    },
    "source": [
-    "*   Visualizar cómo es el espacio de *embedding*. ¿Qué diferencias puede observar con respecto al anterior?\n"
+    "*   Visualizar cómo es el espacio de *embedding*. ¿Qué diferencias observa respecto a la parte anterior?\n"
    ]
   },
   {
@@ -687,11 +687,11 @@
     "\n",
     "En la mayoría de los casos, la biblioteca debería quedar instalada luego de crear un ambiente virtual (por ejemplo de conda) y hacer:   \n",
     "\n",
-    "`pip install streamlit`  \n",
+    "`!pip install streamlit`  \n",
     "\n",
     "Puede verificar que la instalación sea correcta haciendo:    \n",
     "\n",
-    "`streamlit hello`\n",
+    "`!streamlit hello`\n",
     "\n",
     "Puede ver los detalles de instalación en https://docs.streamlit.io/library/get-started/installation"
    ]
@@ -785,11 +785,11 @@
     "\n",
     "  Salida: \n",
     "\n",
-    "    pred: Predicción del modelo\n",
+    "    pred: Probabilidad de que la crítica sea positiva. \n",
     "\n",
     "  '''\n",
     "  \n",
-    "  # Parametros que haya utiliazado en el preprocesado y en la creación del vocabulario\n",
+    "  # Parametros que haya utiliazado\n",
     "  n_characters= ?\n",
     "  vocab_size= ? \n",
     "  num_oov_buckets= ?\n",
@@ -806,7 +806,7 @@
     "  # Cadena de Preprocesado de la reseña tal como lo hizo en el entrenamiento.\n",
     "  # ...\n",
     "\n",
-    "  # Códifcar la reseña utilizando la tabla del vocabulario\n",
+    "  # Codificar la reseña utilizando la tabla del vocabulario\n",
     "  # ...\n",
     "\n",
     "  # Agregar una dimension al tensor correspondiente al batch. Se sugiere utilizar la función tf.expand_dims()\n",
@@ -908,7 +908,7 @@
     "\n",
     "`!streamlit run apps/movie_review_app/movie_review_app.py`    \n",
     "\n",
-    "* También puede correrlo de forma local desde Colab con el comando: \n",
+    "* Si en vez de localmente, está corriendo el notebook en Colab, ejecute: \n",
     "\n",
     "`!streamlit run apps/movie_review_app/movie_review_app.py & npx localtunnel --port 80`    "
    ]
